--- a/src/components/TaskList.module.css
+++ b/src/components/TaskList.module.css
@@ -1,19 +1,3 @@
-/* SECTION  */
-
-.section {
-  width: 100%;
-}
-
-.section header {
-  max-width: 46rem;
-  width: 100%;
-  margin: 0 auto;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 /* FORM   */
 
 .newTaskForm {
@@ -23,7 +7,6 @@
   justify-content: space-between;
   margin-top: -1.75rem;
 }
-
 
 .newTaskForm input{
   width: 100%;
@@ -72,4 +55,61 @@
 
 .newTaskForm button img {
   margin-left: .375rem;
+}
+
+/* SECTION  */
+
+.section {
+  width: 100%;
+  max-width: 46rem;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.section header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.taskInfo {
+  margin-top: 2.0rem;
+  padding: 2rem 0;
+  width: 100%;
+  
+  display: flex;
+  justify-content: space-between;
+
+  font-weight: 600;
+}
+
+.taskInfo .taskCreated {
+  color: var(--blue);
+  font-size: 1rem;
+}
+
+
+.taskInfo .taskCompleted {
+  margin-left: 8px;
+  padding: 0.2rem 0.6rem;
+  font-size: 0.9rem;
+  color: var(--purple);
+  border-radius: 16px;
+}
+
+.taskInfoCount {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: .25rem;
+  gap: .625rem; 
+
+  background: var(--gray-400);
+  border-radius: 999px;
+
+  font-family: 'Inter';
+  font-size: .75rem;
+  line-height: .9375rem;
+
+  color: var(--gray-200);
 }
