--- a/src/components/TaskList.module.css
+++ b/src/components/TaskList.module.css
@@ -113,3 +113,35 @@
 
   color: var(--gray-200);
 }
+/* 
+section {
+  width: 100%;
+}
+
+.tasksEmpty {
+  max-height: 25rem;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid var(--gray-400);
+  border-radius: 8px;
+}
+
+.tasksEmpty img {
+  margin-top: 3.5rem;
+}
+
+.tasksEmpty strong {
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  color: var(--gray-300);
+  line-height: 0.5;
+}
+
+.tasksEmpty p {
+  margin-top: 1rem;
+  color: var(--gray-300);
+} */
