--- a/src/components/TaskList.module.css
+++ b/src/components/TaskList.module.css
@@ -141,3 +141,22 @@
   margin-top: 1rem;
   color: var(--gray-300);
 }
+
+.listTasks {
+  width: 100%;
+
+  max-height: 25rem;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid var(--gray-400);
+  border-radius: 8px;
+}
+
+.listTasks ul {
+    width: 100%;
+    list-style: none;
+}
