--- a/src/components/TaskList.module.css
+++ b/src/components/TaskList.module.css
@@ -144,19 +144,17 @@
 
 .listTasks {
   width: 100%;
-
   max-height: 25rem;
-  width: 100%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+  /* text-align: center; */
+  /* display: flex; */
+  /* flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   border-top: 1px solid var(--gray-400);
   border-radius: 8px;
 }
 
 .listTasks ul {
-    width: 100%;
-    list-style: none;
+  width: 100%;
+  list-style: none;
 }
