--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -9,7 +9,6 @@
   padding: 1rem 1rem;
 }
 
-
 .labelCheckboxMarked {
   display: block;
   margin-top: 3px;
@@ -64,11 +63,31 @@
 
 
 .trash {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
+  text-align: center;
 }
 
 .trash:hover {
   background: var(--gray-400);
   border-radius: 5px;
   color: var(--red-danger);
+}
+
+.textUnmarked p {
+  color: var(--gray-100);
+  font-size: .875rem;
+  line-height: 1.8;
+}
+
+.textMarked p {
+  color: var(--gray-100);
+  opacity: 0.4;
+  text-decoration: line-through;
+  line-height: 1.6;
+  font-weight: 400;
 }
